# 3P-Pong-Phon-Pon

./: README.md
3P_Back/: logger.js  package-lock.json  package.json  server.js
3P_Back/api/: customer.js
3P_Back/config/: corsOptions.js  db.js
3P_Back/controller/: customerController.js  promotionController.js
3P_Back/model/: User.js  user.js
3P_Back/routes/: customer.js  promotion.js
3P_ESP/: CMakeLists.txt  sdkconfig
3P_ESP/components/cmd_nvs/: CMakeLists.txt  cmd_nvs.c
3P_ESP/components/cmd_router/: cmd_router.c
3P_ESP/components/cmd_system/: CMakeLists.txt  cmd_system.c
3P_ESP/components/portal/: CMakeLists.txt  component.mk  dns_hijack.c  mqtt_notify.c  mqtt_notify.h  portal.c  portal.h
3P_ESP/main/: CMakeLists.txt  buzzer.c  buzzer.h  esp32_nat_router.c  lcd.c  lcd.h  user_event.c  user_event.h
3P_Front/: package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.js
3P_Front/src/: coupon.svelte.ts
3P_Front/src/components/: mcard.svelte  nav.svelte  pcard.svelte  test.svelte
3P_Front/src/lib/stores/: coupon.ts
3P_Front/src/routes/: +layout.svelte  +page.svelte
3P_LINE_CALL_BACK/: data.db  db.sqlite  liff.html  package-lock.json  package.json  server.js
